--- a/Application/Home/View/default/_Layout/main.html
+++ b/Application/Home/View/default/_Layout/main.html
@@ -40,7 +40,7 @@
             <block name="top-nav"></block>
 
             <block name="main-nav">
-                <nav class="main-nav navbar navbar-default navbar-fixed-top clearfix" role="navigation">
+                <nav class="main-nav navbar navbar-default navbar-static-top clearfix" role="navigation">
                     <div class="container">
                         <div class="navbar-header">
                             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse-main">
@@ -104,7 +104,7 @@
             <block name="jumbotron"></block>
 
             <block name="breadcrumb">
-                <div id="breadcrumb" class="container">
+                <div class="container">
                     <ul class="breadcrumb">
                         <li><a href="__ROOT__/"><span class="fa fa-home"></span></a></li>
                         <corethink:breadcrumb name="_breadcrumb" cid="$__CURRENT_CATEGORY__" group="$__CURRENT_CATEGORY_GROUP__">
