--- a/Application/Home/View/default/User/index.html
+++ b/Application/Home/View/default/User/index.html
@@ -18,7 +18,7 @@
 </block>
 
 <block name="breadcrumb">
-    <div id="breadcrumb" class="container">
+    <div class="container">
         <ul class="breadcrumb">
             <li><i class="icon-location-arrow"></i></li>
             <li><a href="__ROOT__/">首页</a></li>
