--- a/Application/Install/View/Index/step2.html
+++ b/Application/Install/View/Index/step2.html
@@ -72,7 +72,7 @@
                         </volist>
                     </tbody>
                 </table>
-                <a class="btn btn-primary btn-block ajax-get" href="{:U('step2')}">下一步</a>
+                <button class="btn btn-primary btn-block ajax-get" href="{:U('step2')}">下一步</button>
                 <a class="btn btn-default btn-block" href="{:U('step1')}">上一步</a>
             </div>
             <div class="panel-footer">
