--- a/Application/Admin/View/Public/think/error.html
+++ b/Application/Admin/View/Public/think/error.html
@@ -111,7 +111,7 @@
         <div class="message-action">
             <a class="btn" id="btn-now" href="<?php echo($jumpUrl); ?>">立即跳转</a>
             <a class="btn" id="btn-stop" onclick="stop()">停止跳转</a>
-            <a class="btn" id="btn-now" href="<?php echo(U('Admin/Account/logout')); ?>">重新登录</a>
+            <a class="btn" id="btn-now" href="<?php echo(U('Admin/Public/logout')); ?>">重新登录</a>
         </div>
     </div>
     <script type="text/javascript">
