--- a/Application/Admin/View/Public/login.html
+++ b/Application/Admin/View/Public/login.html
@@ -176,7 +176,9 @@
     </style>
 </block>
 
-<block name="main">
+<block name="full-header"></block>
+
+<block name="full-container">
     <!-- 背景 -->
     <div id="particles-js" class="background"></div>
 
