--- a/Application/Admin/View/Public/css/admin.css
+++ b/Application/Admin/View/Public/css/admin.css
@@ -1,9 +1,3 @@
-.iframe {
-    width: 100%;
-    height: 100%;
-    border: 0;
-}
-
 /* 布局 */
 @media (min-width: 768px) {
     .main-nav .navbar-header {
@@ -22,17 +16,87 @@
         background: #eee;
         width: 220px;
     }
+    #sidebar .navside {
+        border-radius: 0;
+    }
     #main {
         padding: 0px;
         position: fixed;
-        top:  50px;
+        top:  51px;
         bottom: 0;
         right: 0;
         left: 220px;
-        overflow: hidden;
         width: auto;
     }
-    .ct-tab-content .tab-pane {
+
+    /* 面包屑导航 */
+    #main .breadcrumb {
+        border-radius: 0;
+        margin-bottom: 0;
+        background: #f8f8f8;
+    }
+    #main .breadcrumb li {
+        padding: 3px 0 2px 0;
+    }
+    #main .navbar {
+        border-radius: 0;
+    }
+
+    /* 标签切换 */
+    .ct-tab-nav {
+        min-height: 20px;
+        background: #fff;
+        border-left: 0;
+    }
+    .ct-tab-nav .navbar-left {
+        border-right: 1px solid #eee;
+    }
+    .ct-tab-nav .navbar-right {
+        border-left: 1px solid #eee;
+    }
+    .ct-tab-nav .nav>li>a {
+        padding: 9px 10px;
+        background: #fff;
+        margin-bottom: -1px;
+        border-bottom: 1px solid #eee;
+    }
+    .ct-tab-nav .nav>li>a:hover {
+        background-color: #eee;
+    }
+    .ct-tab-wrap {
+        width: auto;
+        overflow: hidden;
+        display: inline-block;
+        overflow: hidden;
+        position: absolute;
+        left: 41px;
+        right:0;
+    }
+    .ct-tab-wrap .ct-tab {
+        position: relative;
+        left: 0;
+        right: 0;
+        width: auto;
+    }
+    .ct-tab-wrap .ct-tab>li.active>a {
+        padding-bottom: 11px;
+        border-left: 1px solid #eee;
+        border-right: 1px solid #eee;
+        padding: 9px 9px 11px;
+        border-bottom: 0;
+        background-color: #fff !important;
+    }
+    .ct-tab-nav .ct-tab>li:first-child.active>a {
+        border-left: 0px;
+    }
+    .dashboard {
+        padding-top: 20px;
+        padding-top: 20px;
+    }
+    .ct-tab-nav {
+        margin-top: 0px;
+    }
+    .ct-tab-content>.tab-pane {
         position: absolute;
         top: 41px;
         bottom: 0;
@@ -53,61 +117,18 @@
         overflow-y: scroll;
     }
 }
-
-
-/* 标签切换 */
-.ct-tab-nav {
-    min-height: 20px;
-    background: #fff;
-    border-left: 0;
-}
-.ct-tab-nav .navbar-left {
-    border-right: 1px solid #eee;
-}
-.ct-tab-nav .navbar-right {
-    border-left: 1px solid #eee;
-}
-.ct-tab-nav .nav>li>a {
-    padding: 9px 10px;
-    background: #fff;
-    margin-bottom: -1px;
-    border-bottom: 1px solid #eee;
-}
-.ct-tab-nav .nav>li>a:hover {
-    background-color: #eee;
-}
-.ct-tab-wrap {
-    width: auto;
-    overflow: hidden;
-    display: inline-block;
-    overflow: hidden;
-    position: absolute;
-    left: 41px;
-    right:0;
-}
-.ct-tab-wrap .ct-tab {
-    position: relative;
-    left: 0;
-    right: 0;
-    width: auto;
-}
-.ct-tab-wrap .ct-tab>li.active>a {
-    padding-bottom: 11px;
-    border-left: 1px solid #eee;
-    border-right: 1px solid #eee;
-    border-bottom: 0;
-    background-color: #fff !important;
-}
-.dashboard {
-    padding-top: 20px;
-    padding-top: 20px;
+@media (max-width: 768px) {
+    #sidebar,
+    #main {
+        padding: 0;
+    }
 }
 
 
 /* 页面底部版权 */
 .footer {
-    position: absolute;
-    left: 0;
+    position: fixed;
+    left: 219px;
     right: 0;
     bottom: 0;
 }
