--- a/Application/User/View/Admin/Index/index.html
+++ b/Application/User/View/Admin/Index/index.html
@@ -1,7 +1,7 @@
 <extend name="$_admin_public_layout"/>
 
 <block name="style">
-    <link rel="stylesheet" type="text/css" href="__CUI__/css/cui-extend.min.css">
+    <link rel="stylesheet" type="text/css" href="__CUI__/css/cui.extend.min.css">
 </block>
 
 <block name="script">
@@ -66,7 +66,7 @@
                             <form action="{:U('')}" method="get">
                                 <input id="start_date" name="start_date" value="{$start_date}"> 至
                                 <input id="end_date" name="end_date" value="{$end_date}">
-                                <input id="submit" type="submit" class="btn btn-xs btn-default" value="查询">
+                                <input id="submit" type="submit" class="btn btn-xs btn-default search-btn" value="查询">
                             </form>
                         </h5>
                         <canvas id="mychart" style="width:100%;height:300px;"></canvas>
