修复Cms模块后台文章管理列表分类树不显示的问题

--- a/Application/Cms/View/Admin/Builder/form.html
+++ b/Application/Cms/View/Admin/Builder/form.html
@@ -7,7 +7,7 @@
 
 <block name="main">
     <div class="col-xs-2">
-        <include file="Admin/builder/tree" />
+        <include file="Admin/Builder/tree" />
     </div>
     <div class="col-xs-10">
         <include file="./Application/Common/Builder/formbuilder.html" />
