发布1.3正式版

--- a/Application/Admin/View/Index/index.html
+++ b/Application/Admin/View/Index/index.html
@@ -314,7 +314,7 @@
                                                 </tr>
                                                 <tr>
                                                     <td>核心团队</td>
-                                                    <td>江如意、赵瀚卿...</td>
+                                                    <td>江如意、赵瀚卿、张玥、潘美红、郝鸣燃</td>
                                                 </tr>
                                                 <tr>
                                                     <td>官方QQ群</td>
